--- a/Shopro/index.html
+++ b/Shopro/index.html
@@ -7,9 +7,9 @@
     <body>
         <div>
             <h1 color: rgb(19, 2, 2);">Welcome to ShoPro</h1>
-            <input style="border:none;outline:none;background:none;border-bottom:1px solid black" type="text" placeholder="NAME"><br><br>
-            <input style="border:none;outline:none;background:none;border-bottom:1px solid black" type="email" placeholder="name@gmail.com"><br><br>
-            <input style="border:none;outline:none;background:none;border-bottom:1px solid black" type="password" name="" id="" placeholder="password"><br><br>
+            <input style="border:none;outline:none;background:none;border-bottom:1px solid black" type="text" placeholder="               NAME"><br><br>
+            <input style="border:none;outline:none;background:none;border-bottom:1px solid black" type="email" placeholder="         name@gmail.com"><br><br>
+            <input style="border:none;outline:none;background:none;border-bottom:1px solid black" type="password" name="" id="" placeholder="               Password"><br><br>
             <button>Sign up</button><hr>
             <p>By creating an account,you agree and accept our terms and privacy policy</p><hr>
             <p>Already have an account?<a href="">Log in</a></p>
