--- a/Shopro/index.html
+++ b/Shopro/index.html
@@ -11,7 +11,7 @@
             <input style="border:none;outline:none;background:none;border-bottom:1px solid black" type="email" placeholder="         name@gmail.com"><br><br>
             <input style="border:none;outline:none;background:none;border-bottom:1px solid black" type="password" name="" id="" placeholder="               Password"><br><br>
             <button>Sign up</button><hr>
-            <p>By creating an account,you agree and accept our terms and privacy policy</p><hr>
+            <p>By creating an account,you agree and accept to our terms and privacy policy</p><hr>
             <p>Already have an account?<a href="">Log in</a></p>
         </div>
         
