home_page_additions2

--- a/Shopro/homePage.html
+++ b/Shopro/homePage.html
@@ -118,10 +118,10 @@
 
     <div class="middler">
         
-            <div class="Headphones"></div>
-            <div class="Laptops"></div>
-            <div class="Mobiles"></div>
-            <div class="Televisions"></div>
+            <div class="Headphones">Headphones</div>
+            <div class="Laptops">Laptops</div>
+            <div class="Mobiles">Mobiles</div>
+            <div class="Televisions">Televisions</div>
         
 
     </div>
