--- a/Shopro/homePage.html
+++ b/Shopro/homePage.html
@@ -82,14 +82,13 @@
     </header>
     <div class="horizontal">
     <div class="list">
-        <p>Mobile</p><br>
-        <p>Laptops</p><br>
-        <p>Cameras</p><br>
-        <p>Computer and tech</p><br>
-        <p>Televisions</p><br>
-        <p>Smart Watches</p><br>
-        <p>Headphones</p><br>
-        <p>More Category</p><br>
+        <div  class="br"><a style="padding: 40px 50px 20px 20px ;" href="./mobiles/try.html">Mobile</a><br></div>
+        <div class="br"><a style="padding: 40px 50px 20px 20px ;" href="./mobiles/try.html">Laptops</a><br></div>
+        <div class="br"><a style="padding: 40px 50px 20px 20px ;" href="./mobiles/try.html">Cameras</a><br></div>
+        <div class="br"><a style="padding: 40px 50px 20px 20px ;" href="./mobiles/try.html">Computer and tech</a><br></div>
+        <div class="br"><a style="padding: 40px 50px 20px 20px ;" href="./mobiles/try.html">Televisions</a><br></div>
+        <div class="br"><a style="padding: 40px 50px 20px 20px ;" href="./mobiles/try.html">Smart Watches</a><br></div>
+        <div class="br"><a style="padding: 40px 50px 20px 20px ;" href="./mobiles/try.html">More Category</a><br></div>
     </div>
     <div class="middle">
         <h1>Latest trending Electronic Items</h1>
