Added Some product registering stuff

--- a/Selling_Part/mainform.html
+++ b/Selling_Part/mainform.html
@@ -15,15 +15,15 @@
         <form class="col-md-12">
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Product Name</label>
-              <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+              <input id="pname"type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
             </div>
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Price Range (START)</label>
-              <input type="number" class="form-control" id="exampleInputPassword1" required>
+              <input id="prs" type="number" class="form-control" id="exampleInputPassword1" required>
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Price Range (END)</label>
-                <input type="number" class="form-control" id="exampleInputPassword1" required>
+                <input id="pre" type="number" class="form-control" id="exampleInputPassword1" required>
             </div>
             <div class="mb-3">
                 <label class="form-check-label" for="exampleCheck1">Product Type</label>
@@ -55,13 +55,13 @@
             </div>
             <br>
             <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
+                <input id="agree" type="checkbox" class="form-check-input" id="exampleCheck1" required>
                 <label class="form-check-label" for="exampleCheck1">Agree To all Terms and Conditions</label>
             </div>
             <br>
             <button type="reset" class="clear btn btn-warning">Clear</button> 
-            <input id="sub" class="success" type="submit" value="Next">
         </form>
+        <input id="sub" class="success" type="submit" value="Next">
         <!-- <button class="success btn btn-danger" id="sub">Next <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
         </svg> </button> -->
